Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24171

index_online_log is incorrectly instrumented as rw-lock, not mutex

    XMLWordPrintable

Details

    Description

      While working on MDEV-24167, I noticed that index_online_log is being instrumented as rw-lock, instead of being instrumented as a mutex. The exact consequences of this are unknown. The row_lock_t::mutex is only used during ALTER ONLINE TABLE when concurrent DML is being buffered or applied.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.