MDEV-24171 index_online_log is incorrectly instrumented as rw-lock, not mutex